src/main/java/com/example/suzumechat/service/channel/dto/message/error/ApprovalError.java
package com.example.suzumechat.service.channel.dto.message.error;

import com.example.suzumechat.utility.dto.message.ErrorMessage;

public class ApprovalError implements ErrorMessage {

}
